<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplication List Film</string>
    <string name="hello_world">Hello world!</string>
	
	<string name="title">Title</string>
	<string name="release">Title</string>
	<string name="vote_average">Vote Average    :  </string>
	<string name="vote_count">Vote Count       :  </string>
	<string name="popularity">Popularity         : </string>
	<string name="overview">Overview           : </string>
	
	<string name="ganti_bahasa">Switch Language</string>
	
	<string name="frag_film">List Film</string>
	<string name="frag_tv">List Tv</string>

</resources>
